# simpukka-discord

./: .gitignore  pyproject.toml  readme.MD
simpukka_discord/: __init__.py  docs_extractor.py  embed.py  object_utils.py  stack_functions.py  utils.py
simpukka_discord/objects/: _guildChannel.py  ctx.py  discord_utils.py  embed.py  emoji.py  event.py  forum.py  guild.py  invite.py  member.py  message.py  role.py  rule.py  stage.py  sticker.py  text.py  thread.py  user.py  voice.py
